--- a/Cinema.csproj
+++ b/Cinema.csproj
@@ -64,6 +64,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ClassHelper\NavigateClass.cs" />
     <Compile Include="DB\AgeRestriction.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -169,10 +170,34 @@
     <Compile Include="DB\VW_ProductInfo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Pages\AddEditFilmPage.xaml.cs">
+      <DependentUpon>AddEditFilmPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\InfoFilmPage.xaml.cs">
+      <DependentUpon>InfoFilmPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\InfoFilmWindow.xaml.cs">
+      <DependentUpon>InfoFilmWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\NavigateWindow.xaml.cs">
+      <DependentUpon>NavigateWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\RegistrationWindow.xaml.cs">
       <DependentUpon>RegistrationWindow.xaml</DependentUpon>
     </Compile>
+    <Page Include="Pages\AddEditFilmPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\InfoFilmPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\AuthorizationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\InfoFilmWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -192,6 +217,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Windows\NavigateWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\RegistrationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -232,7 +261,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Pages\" />
     <Folder Include="Res\" />
   </ItemGroup>
   <ItemGroup>
