--- a/Cinema.csproj
+++ b/Cinema.csproj
@@ -74,9 +74,6 @@
     <Compile Include="DB\Category.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="DB\Cinema.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="DB\CreatorCountry.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -117,6 +114,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="DB\MovieStudio.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DB\NetCinema.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="DB\Product.cs">
@@ -170,11 +170,56 @@
     <Compile Include="DB\VW_ProductInfo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Pages\AddEditCashReceiptPage.xaml.cs">
+      <DependentUpon>AddEditCashReceiptPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\AddEditEmployeePage.xaml.cs">
+      <DependentUpon>AddEditEmployeePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\AddEditFilmPage.xaml.cs">
       <DependentUpon>AddEditFilmPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\AddEditNetCinemaPage.xaml.cs">
+      <DependentUpon>AddEditNetCinemaPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\AddEditProductPage.xaml.cs">
+      <DependentUpon>AddEditProductPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\AddEditSessionPage.xaml.cs">
+      <DependentUpon>AddEditSessionPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\AddEditTicketPage.xaml.cs">
+      <DependentUpon>AddEditTicketPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\AddEditUserPage.xaml.cs">
+      <DependentUpon>AddEditUserPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\InfoCashReceiptPage.xaml.cs">
+      <DependentUpon>InfoCashReceiptPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\InfoCinemaPage.xaml.cs">
+      <DependentUpon>InfoCinemaPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\InfoEmployeePage.xaml.cs">
+      <DependentUpon>InfoEmployeePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\InfoFilmPage.xaml.cs">
       <DependentUpon>InfoFilmPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\InfoProductPage.xaml.cs">
+      <DependentUpon>InfoProductPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\InfoSessionPage.xaml.cs">
+      <DependentUpon>InfoSessionPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\InfoTicketPage.xaml.cs">
+      <DependentUpon>InfoTicketPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\InfoUserPage.xaml.cs">
+      <DependentUpon>InfoUserPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\BuyWindow.xaml.cs">
+      <DependentUpon>BuyWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\InfoFilmWindow.xaml.cs">
       <DependentUpon>InfoFilmWindow.xaml</DependentUpon>
@@ -185,7 +230,47 @@
     <Compile Include="Windows\RegistrationWindow.xaml.cs">
       <DependentUpon>RegistrationWindow.xaml</DependentUpon>
     </Compile>
+    <Page Include="Pages\AddEditCashReceiptPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\AddEditEmployeePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\AddEditFilmPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\AddEditNetCinemaPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\AddEditProductPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\AddEditSessionPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\AddEditTicketPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\AddEditUserPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\InfoCashReceiptPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\InfoCinemaPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\InfoEmployeePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -193,7 +278,27 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\InfoProductPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\InfoSessionPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\InfoTicketPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\InfoUserPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\AuthorizationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\BuyWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
